# M.A.N.T.I.S.

./: .env.example  README.md  index.html  package-lock.json
docs/: ARCHITECTURE.md  DECISION_LOOP.md  DESIGN_SYSTEM.md  NEON_SENTRY_DESIGN.md  SECURITY.md  SKILLS.md
mantis-backend/: .gitignore  pyproject.toml  requirements.txt
mantis-backend/src/mantis/: __init__.py  config.py  logging.py  main.py  types.py
mantis-backend/src/mantis/agent/: __init__.py  context_builder.py  executor.py  guards.py  reasoner.py  runtime.py
mantis-backend/src/mantis/api/: __init__.py  routes.py  server.py
mantis-backend/src/mantis/contracts/: __init__.py
mantis-backend/src/mantis/skills/: __init__.py  bonzo_lend.py  hedera.py  memory.py  oracle.py  sentry.py
mantis-backend/tests/: test_bonzo_lend.py  test_data_layer.py  test_guards.py  test_memory.py  test_oracle.py
mantis-web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
mantis-web/src/: App.tsx  index.css  main.tsx
mantis-web/src/components/AppShell/: AppShell.css  AppShell.tsx
mantis-web/src/context/: AgentContext.tsx  WalletContext.tsx
mantis-web/src/data/: mockAPYHistory.ts  mockActionLog.ts  mockAgentState.ts  mockChatMessages.ts  mockData.ts  mockOracleData.ts  mockSentryData.ts  mockVaultPosition.ts
mantis-web/src/hooks/: useLiveTick.ts  useOracleFeed.ts  useSimulatedTick.ts  useTypewriter.ts  useWalletData.ts
mantis-web/src/pages/: ArchitecturePage.tsx  Chat.tsx  Dashboard.tsx  Settings.tsx
mantis-web/src/pages/Landing/: Landing.css  (+1 more)
mantis-web/src/types/: mantis.ts
(+40 files in other folders)
